# Red-Eyes-Correction

./: CMakeLists.txt  main.cpp  teste_results.csv  testing_results.csv
src/: red-eyes.cpp  red-eyes.h  test.cpp
